# sf6gg

./: .gitignore  LICENSE  README.md  pyproject.toml  schema.json
.devcontainer/: Dockerfile  devcontainer.json
src/sf6gg/: __init__.py  cli.py  crud.py  database.py  ggint.py  ggschema.py  models.py
